--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
 <h1>Luis Solis</h1>
 </br>
-This is text.sdofih
+This is text.
+</br>
+and this is a massive text change too!
 
 </body>
 </html>
