--- a/devportfolio-master/index.html
+++ b/devportfolio-master/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>David Lash</h1>
-            <h2>CS Professor, Software Engineer</h2>
+            <h1>Luis Angel Solis</h1>
+            <h2>Software Engineer, Programmer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
